# PyTorch-Computer-Vision

./: .gitignore  README.md  pyproject.toml
results/metrics/: evaluation_results_20250621_184600.json
src/: evaluation_results_20250616_111638.json  gui_predict.py  gui_results.py  main.py  model.py  predict.py  train.py  utils.py
